[DM] Split icon into its own column
Bug: 237701028
Test: DeviceIconButtonTableCellRendererTest
Change-Id: I55e6b826e36438c13119810f757a63939b4be120

GitOrigin-RevId: ac7f6deda60342ec94453994cebbe7145f65958e